# react-native-launcher-windows

./: CONTRIBUTING.md  LICENSE  LauncherWindows.podspec  README.md  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: cd.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/launcherwindows/: LauncherWindowsModule.kt  LauncherWindowsPackage.kt
cpp/: react-native-launcher-windows.cpp  react-native-launcher-windows.h
example/: app.json  metro.config.js  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/ios/: Podfile
example/ios/LauncherWindowsExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/LauncherWindowsExample.xcodeproj/: project.pbxproj
example/src/: App.tsx
example/windows/: ReactNativeLauncherWindowsExample.sln
example/windows/ReactNativeLauncherWindowsExample/: resource.h  (+6 more)
example/windows/ReactNativeLauncherWindowsExample.Package/: Package.appxmanifest  ReactNativeLauncherWindowsExample.Package.wapproj  packages.lock.json
ios/: LauncherWindows.h  LauncherWindows.mm
src/: NativeLauncherWindows.ts  index.tsx
src/__tests__/: index.test.tsx
windows/: ReactNativeLauncherWindows.sln
windows/ReactNativeLauncherWindows/: ReactNativeLauncherWindows.cpp  ReactNativeLauncherWindows.h  ReactNativeLauncherWindows.vcxproj  ReactNativeLauncherWindows.vcxproj.filters  ReactPackageProvider.cpp  ReactPackageProvider.h  ReactPackageProvider.idl  resource.h
(+6 files in other folders)
